# CLIConfigEditUI

./: .gitignore  AGENTS.md  DESIGN.md  README.md  REQUIREMENTS.md  SECURITY.md  eslint.config.js  implementation_plan.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
.beads/: issues.jsonl
.github/scripts/: setup-branch-protection.sh
.github/workflows/: release.yml
conductor/: beads.json  product.md  refresh_state.json  setup_state.json  tech-stack.md  tech-stack.md.bak  tracks.md  workflow.md
docs/: CLI_CONFIGS.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  path_safety.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: cli_tools.rs  mod.rs
src-tauri/src/mcp/: converters.rs  import.rs  mod.rs  storage.rs  sync.rs  types.rs
src-tauri/src/ssh/: commands.rs  connection.rs  error.rs  mod.rs  operations.rs  tests.rs
src-tauri/src/versions/: mod.rs
src/components/: add-config-file-modal.tsx  add-tool-modal.tsx  backup-modal.tsx  command-palette.tsx  config-editor.tsx  configure-tool-modal.tsx  edit-config-file-modal.tsx  edit-tool-modal.tsx  editor-error-banner.tsx  header.tsx  icon-picker.tsx  index.ts  keyboard-shortcuts-modal.tsx  save-version-dialog.tsx  settings-modal.tsx  sidebar.tsx  toast.tsx  update-modal.tsx  version-diff-view.tsx  version-edit-view.tsx  version-list-item.tsx  versions-tab.tsx  welcome-screen.tsx
src/constants/: brand-icons.tsx  tool-icons.tsx  (+2 more)
(+193 files in other folders)
