[package]
name = "cli-config-editor"
version = "0.1.0"
description = "A cross-platform CLI config editor"
authors = ["CLI Config Editor"]
edition = "2021"

[lib]
name = "cli_config_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
